# interview

./: .gitignore  .project  4_Trees.sln  4_Trees.vcxproj  4_Trees.vcxproj.filters  InterviewExpectations.txt  README.md  build.gradle  gradlew  pom.xml
01 Sorting/: 0_Sorting.sln  0_Sorting.vcxproj.filters
02 LinkedLists/: 5_LinkedLists.sln
03 Trees/: 4_Trees.sln  4_Trees.vcxproj  4_Trees.vcxproj.filters
04 Heap/: 3_Heap.sln  3_Heap.vcxproj.filters
05 Graph/: 2_Graph.sln  2_Graph.vcxproj  2_Graph.vcxproj.filters
06 Array/: 6_Arrays_n_Algorithms.vcxproj.filters
09 System Design/: 1_OtherDesigns.sln  1_OtherDesigns.vcxproj  1_OtherDesigns.vcxproj.filters
0_Sorting/: 0_Sorting.sln  0_Sorting.vcxproj  0_Sorting.vcxproj.filters
1 Sorting/: 0_Sorting.vcxproj
11 Hash/: PrintonlyDuplicatesinArray-HashTable.cpp
12 Stack/: ReverseStack-withoutusingLoops.cpp
13 BackTracking/: KnightsTour-BackTracking.cpp  (+1 more)
Interview Preparation Kit - CPP/02. Arrays/: 001. 2D Array - DS.cpp  002. Arrays - Left Rotation.cpp  003. New Year Chaos.cpp  004. Minimum Swaps 2.cpp  005. Array Manipulation.cpp  CMakeLists.txt
Interview Preparation Kit - CPP/03. Dictionaries and Hashmaps/: 001. Hash Tables - Ransom Note.cpp  002. Two Strings.cpp  003. Sherlock and Anagrams.cpp  004. Count Triplets.cpp  005. Frequency Queries.cpp  CMakeLists.txt
Interview Preparation Kit - CPP/05. String Manipulation/: 001. Strings - Making Anagrams.cpp  002. Alternating Characters.cpp  003. Sherlock and the Valid String.cpp  004. Special String Again.cpp  005. Common Child.cpp  CMakeLists.txt
(+947 files in other folders)
