cmake_minimum_required (VERSION 3.8)

project(arrays)

add_executable(task-1 001.\ 2D\ Array\ -\ DS.cpp)
add_executable(task-2 002.\ Arrays\ -\ Left\ Rotation.cpp)
add_executable(task-3 003.\ New\ Year\ Chaos.cpp)
add_executable(task-4 004.\ Minimum\ Swaps\ 2.cpp)
add_executable(task-5 005.\ Array\ Manipulation.cpp)
