cmake_minimum_required (VERSION 3.8)

project(dictionaries-and-hashmaps)

add_executable(task-1 001.\ Hash\ Tables\ -\ Ransom\ Note.cpp)
add_executable(task-2 002.\ Two\ Strings.cpp)
add_executable(task-3 003.\ Sherlock\ and\ Anagrams.cpp)
add_executable(task-4 004.\ Count\ Triplets.cpp)
add_executable(task-5 005.\ Frequency\ Queries.cpp)