cmake_minimum_required (VERSION 3.8)

project(string-manipulation)

add_executable(task-1 001.\ Strings\ -\ Making\ Anagrams.cpp)
add_executable(task-2 002.\ Alternating\ Characters.cpp)
add_executable(task-3 003.\ Sherlock\ and\ the\ Valid\ String)
add_executable(task-4 004.\ Special\ String\ Again.cpp)
add_executable(task-5 005.\ Common\ Child.cpp)
